x86/include/TestFlashAPI.cs

// TestFlashAPI.cs : Declares the DLL functions for C#.
// Copyright (c) 2022 Qualcomm Technologies International, Ltd.
// All Rights Reserved.
// Qualcomm Technologies International, Ltd. Confidential and Proprietary.

// Auto-generated CS wrapper for TestFlash DLL.
// Created on 2022-11-18 15:14 from TestFlash.h file

using System;
using System.Runtime.InteropServices;
using System.Text;

namespace TestFlashAPI
{
    public class TestFlash
    {
        const CharSet charset = CharSet.Ansi;
        const CallingConvention calling_convention = CallingConvention.StdCall;

        [DllImport("TestFlash.dll", EntryPoint="flOpen",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flOpen(int port, int xtal, int delays, int transport);

        [DllImport("TestFlash.dll", EntryPoint="flOpenUnlock",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flOpenUnlock(int port, int xtal, int delays, int transport, String unlockKey);

        [DllImport("TestFlash.dll", EntryPoint="flmOpen",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmOpen(uint deviceMask, int xtal, int transport);

        [DllImport("TestFlash.dll", EntryPoint="flmOpenUnlock",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmOpenUnlock(uint deviceMask, int xtal, int transport, String unlockKey);

        [DllImport("TestFlash.dll", EntryPoint="flOpenTrans",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flOpenTrans(String trans, int xtal, int delays);

        [DllImport("TestFlash.dll", EntryPoint="flOpenUnlockTrans",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flOpenUnlockTrans(String trans, int xtal, int delays, String unlockKey);

        [DllImport("TestFlash.dll", EntryPoint="flmOpenTrans",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmOpenTrans(uint deviceMask, String trans, int xtal);

        [DllImport("TestFlash.dll", EntryPoint="flmOpenUnlockTrans",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmOpenUnlockTrans(uint deviceMask, String trans, int xtal, String unlockKey);

        [DllImport("TestFlash.dll", EntryPoint="flReadProgramFiles",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flReadProgramFiles(String fileName);

        [DllImport("TestFlash.dll", EntryPoint="flmReadProgramFiles",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmReadProgramFiles(String fileName);

        [DllImport("TestFlash.dll", EntryPoint="flProgramBlock",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flProgramBlock();

        [DllImport("TestFlash.dll", EntryPoint="flmProgramBlock",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmProgramBlock(uint deviceMask, byte eraseFirst, byte verifyAfter, byte restartAfter);

        [DllImport("TestFlash.dll", EntryPoint="flErase",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flErase();

        [DllImport("TestFlash.dll", EntryPoint="flmEraseBlock",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmEraseBlock(uint deviceMask);

        [DllImport("TestFlash.dll", EntryPoint="flmEraseSpawn",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmEraseSpawn(uint deviceMask);

        [DllImport("TestFlash.dll", EntryPoint="flGangProgramBlock",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flGangProgramBlock(ushort deviceMask, byte eraseFirst, byte restartAfter, byte skipUnused);

        [DllImport("TestFlash.dll", EntryPoint="flGetDetectedDevices",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern ushort flGetDetectedDevices();

        [DllImport("TestFlash.dll", EntryPoint="flGetBitErrorField",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern ushort flGetBitErrorField();

        [DllImport("TestFlash.dll", EntryPoint="flmGetBitErrorField",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern uint flmGetBitErrorField();

        [DllImport("TestFlash.dll", EntryPoint="flProgramSpawn",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flProgramSpawn();

        [DllImport("TestFlash.dll", EntryPoint="flmProgramSpawn",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmProgramSpawn(uint deviceMask, byte eraseFirst, byte verifyAfter, byte restartAfter);

        [DllImport("TestFlash.dll", EntryPoint="flGangProgramSpawn",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flGangProgramSpawn(ushort deviceMask, byte eraseFirst, byte restartAfter, byte skipUnused);

        [DllImport("TestFlash.dll", EntryPoint="flGetProgress",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flGetProgress();

        [DllImport("TestFlash.dll", EntryPoint="flmGetDeviceProgress",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmGetDeviceProgress(uint device);

        [DllImport("TestFlash.dll", EntryPoint="flGetLastError",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flGetLastError();

        [DllImport("TestFlash.dll", EntryPoint="flmGetLastError",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmGetLastError();

        [DllImport("TestFlash.dll", EntryPoint="flmGetDeviceError",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmGetDeviceError(uint device);

        [DllImport("TestFlash.dll", EntryPoint="flResetAndStart",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flResetAndStart();

        [DllImport("TestFlash.dll", EntryPoint="flmResetAndStart",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmResetAndStart(uint deviceMask);

        [DllImport("TestFlash.dll", EntryPoint="flClose",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern void flClose();

        [DllImport("TestFlash.dll", EntryPoint="flCloseRet",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flCloseRet();

        [DllImport("TestFlash.dll", EntryPoint="flmClose",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern void flmClose(uint deviceMask);

        [DllImport("TestFlash.dll", EntryPoint="flmCloseRet",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmCloseRet(uint deviceMask);

        [DllImport("TestFlash.dll", EntryPoint="flGetVersion",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flGetVersion(StringBuilder versionStr);

        [DllImport("TestFlash.dll", EntryPoint="flmGetVersion",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmGetVersion(StringBuilder versionStr);

        [DllImport("TestFlash.dll", EntryPoint="flStopProcessor",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flStopProcessor();

        [DllImport("TestFlash.dll", EntryPoint="flmStopProcessor",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmStopProcessor(uint deviceMask);

        [DllImport("TestFlash.dll", EntryPoint="flGetDownloadTime",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern uint flGetDownloadTime();

        [DllImport("TestFlash.dll", EntryPoint="flmGetDeviceDownloadTime",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern uint flmGetDeviceDownloadTime(uint device);

        [DllImport("TestFlash.dll", EntryPoint="flGetAvailablePorts",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flGetAvailablePorts(out ushort maxLen, StringBuilder ports, StringBuilder trans, out ushort count);

        [DllImport("TestFlash.dll", EntryPoint="flGetAvailablePortsEx",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flGetAvailablePortsEx(uint criteria, out ushort maxLen, StringBuilder ports, StringBuilder trans, out ushort count);

        [DllImport("TestFlash.dll", EntryPoint="flmGetAvailablePorts",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmGetAvailablePorts(out ushort maxLen, StringBuilder ports, StringBuilder trans, out ushort count);

        [DllImport("TestFlash.dll", EntryPoint="flmGetAvailablePortsEx",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmGetAvailablePortsEx(uint criteria, out ushort maxLen, StringBuilder ports, StringBuilder trans, out ushort count);

        [DllImport("TestFlash.dll", EntryPoint="flmConvertPort",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmConvertPort(String transIn, StringBuilder transOut, out uint device);

        [DllImport("TestFlash.dll", EntryPoint="flGetFirmwareIds",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flGetFirmwareIds(byte source, out uint loaderId, StringBuilder loaderName, out uint stackId, StringBuilder stackName, ushort maxNameLen);

        [DllImport("TestFlash.dll", EntryPoint="flmGetDeviceFirmwareIds",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmGetDeviceFirmwareIds(uint device, out uint loaderId, StringBuilder loaderName, out uint stackId, StringBuilder stackName, ushort maxNameLen);

        [DllImport("TestFlash.dll", EntryPoint="flmGetFileFirmwareIds",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmGetFileFirmwareIds(out uint loaderId, StringBuilder loaderName, out uint stackId, StringBuilder stackName, ushort maxNameLen);

        [DllImport("TestFlash.dll", EntryPoint="flVerify",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flVerify();

        [DllImport("TestFlash.dll", EntryPoint="flmVerifyBlock",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmVerifyBlock(uint deviceMask, byte restartAfter);

        [DllImport("TestFlash.dll", EntryPoint="flmVerifySpawn",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int flmVerifySpawn(uint deviceMask, byte restartAfter);
